# nexis

./: .air.toml  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/: CODESTYLE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml  settings.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-feature-request.md  4-enhancement-request.md  5-security-report.md  6-question-support.md
.github/workflows/: linter.yml  release.yml  test-worker.yml
cmd/: api.go  env.go  root.go  routes.go
cmd/middleware/: auth.go  logger.go  ratelimiter.go  stack.go
cmd/routes/: root.go  root_test.go
cmd/routes/api/v1/: up.go  up_test.go
cmd/types/: response.go
cmd/utils/: env.go  env_test.go  json-response.go  json-response_test.go
cmd/utils/auth/: jwt.go  jwt_test.go
docs/: README.md  config.md  index.md
docs/commands/: README.md  docs.md  list.md
src/: main.rs  src.go
src/nexis/: __init__.py  __main__.py  __version__.py  entrypoint.py  exceptions.py  factory.py  nexis.py  version.py
src/nexis/config/: config.py  constants.py  exceptions.py
src/nexis/config/parsers/: mode.py  parser.py  parsers.py  url.py  version.py
src/nexis/console/: command_loader.py  entrypoint.py
src/nexis/console/commands/: command.py  docs.py
src/nexis/logging/: formatter.py  handler.py
src/nexis/utils/: compat.py
tests/: version_test.py
tests/config/parsers/: mode_parser_test.py  url_parser_test.py  version_parser_test.py
