[tool.poetry]
name = "nexis"
version = "0.2.0"
description = "NYP InfoSec Auth CLI"
authors = ["Alex <contact@ngjx.org>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
  { include = "nexis", from = "src" },
  { include = "nexis/py.typed", from = "src" },
]
include = [{ path = "tests", format = "sdist" }]
keywords = ["nyp", "nypinfosec", "auth", "client", "cli"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Security",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://github.com/caffeine-addictt/nexis"
Documentation = "https://github.com/caffeine-addictt/nexis/blob/main/README.md"
Source = "https://github.com/caffeine-addictt/nexis"
"Release Notes" = "https://github.com/caffeine-addictt/nexis/releases"
"Bug Tracker" = "https://github.com/caffeine-addictt/nexis/issues"

[tool.poetry.scripts]
nexis = "nexis.console.entrypoint:main"

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^2.1.0"
importlib-metadata = { version = ">=4.4", python = "<3.10" }
typing-extensions = "^4.12.2"
platformdirs = "^4.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
